Some NPE checks + formating